==> farid132097/NRF52832_Radio_Driver/Receiver/uart.c <==
#include "nrf.h"
#include "cdefs.h"
#include "uart.h"
#define  UART_DOUBLE_SPEED
#define  UART_ENABLE_TX
#define  UART_ENABLE_RX
#define  UART_ENABLE_RX_INT
#define  UART_BUFFER_SIZE               (    64U)
#define  UART_RX_PCKT_CMPLT_DELAY       (  500UL)
#define  UART_RX_ACK_MAX_DELAY          (20000UL)
#define  UART_INT_PRIORITY              (     0U)
#define  UART_TIMEOUT_INT_PRIORITY      (     1U)
#define  UART_ACK_INT_PRIORITY          (     2U)
#define  UART_CRC_ENABLE     //Uncomment if packet validation by CRC is needed
#define  UART_CRC_XMODEM     //Uncomment if X-MODEM CRC Protocol is used
#define  UART_RX_ERR_NO_ERR             (0x00U)
#define  UART_RX_ERR_FRAMING            (0x01U)
#define  UART_RX_ERR_OVERRUN            (0x02U)
#define  UART_RX_ERR_READ_INCOMPLETE    (0x10U)

void UART_Config_BAUD_Rate(uint32_t baud_rate){
	NRF_UART0->BAUDRATE = baud_rate;
}

void UART_Config_Tx(void){
	NRF_UART0->PSELTXD = UART_TX_PIN;
	if( (NRF_UART0->ENABLE & UART_ENABLE_ENABLE_Msk) != UART_ENABLE_ENABLE_Enabled ){
		NRF_UART0->ENABLE |= UART_ENABLE_ENABLE_Enabled;
	}
}

void UART_Config_Rx(void){
	NRF_UART0->PSELRXD = UART_RX_PIN;
	if( (NRF_UART0->ENABLE & UART_ENABLE_ENABLE_Msk) != UART_ENABLE_ENABLE_Enabled ){
		NRF_UART0->ENABLE |= UART_ENABLE_ENABLE_Enabled;
	}
	
}

void UART_Config_Rx_Interrupt(void){
  //add rx int config
	NRF_UART0->EVENTS_RXDRDY = 0;
	NRF_UART0->INTENSET |= UART_INTENSET_RXDRDY_Msk;
	NVIC_SetPriority(UARTE0_UART0_IRQn, UART_INT_PRIORITY);
	NVIC_EnableIRQ(UARTE0_UART0_IRQn);
	NRF_UART0->TASKS_STARTRX = 1;
}

void UART_Tx_Byte(uint8_t val){
	NRF_UART0->EVENTS_TXDRDY = 0;
	NRF_UART0->TXD = val;
	NRF_UART0->TASKS_STARTTX = 1;
	while(NRF_UART0->EVENTS_TXDRDY == 0){
		//add timeout
	}
}

uint8_t UART_Rx_Byte(void){
  return (uint8_t)NRF_UART0->RXD;
}

void UART_Timer_Init(void){
  //config comm timer for auto packet validation
	NRF_TIMER0->TASKS_STOP = 1;
	while(NRF_TIMER0->TASKS_STOP == 1){
		//add timeout
	}
	//Prescaler 2^N = 2^4 = 16; 16MHz/16 = 1MHz
	NRF_TIMER0->PRESCALER = 4;
	NRF_TIMER0->MODE = TIMER_MODE_MODE_Timer;
	NRF_TIMER0->BITMODE = TIMER_BITMODE_BITMODE_24Bit<<TIMER_BITMODE_BITMODE_Pos;
	NRF_TIMER0->CC[0] = UART_RX_PCKT_CMPLT_DELAY;
	NRF_TIMER0->INTENSET = TIMER_INTENSET_COMPARE0_Enabled<<TIMER_INTENSET_COMPARE0_Pos;
	NVIC_SetPriority(TIMER0_IRQn, UART_TIMEOUT_INT_PRIORITY);
	NVIC_EnableIRQ(TIMER0_IRQn);
	NRF_TIMER0->TASKS_CLEAR = 1;
	NRF_TIMER0->TASKS_START = 1;
}

void UART_Timer_Enable(void){
	NRF_TIMER0->TASKS_START = 1;
}

void UART_Timer_Disable(void){
	NRF_TIMER0->TASKS_STOP = 1;
	while(NRF_TIMER0->TASKS_STOP == 1){
		//add timeout
	}
}
