==> farid45219/Atmega328P_SERCOM/uart.c <==
#include <avr/io.h>
#include <util/delay.h>
#include <avr/interrupt.h>
#include "uart.h"
#define  UART_RX_ERR_NO_ERR          0x00U
#define  UART_RX_ERR_FRAMING         0x01U
#define  UART_RX_ERR_OVERRUN         0x02U
#define  UART_RX_ERR_READ_INCOMPLETE 0x10U

void UART_Config_BAUD_Rate(uint32_t baud_rate){
  #ifdef UART_DOUBLE_SPEED
  uint32_t UBRR_VAL = ((F_CPU/8)/baud_rate)-1 ;
  UCSR0A |= (1<<U2X0);  
  #else
  UCSR0A &=~ (1<<U2X0);  
  uint32_t UBRR_VAL = ((F_CPU/16)/baud_rate)-1 ;
  #endif
  UBRR0H = (UBRR_VAL >> 8) & 0xFF;
  UBRR0L = UBRR_VAL & 0xFF ;
}

void UART_Config_Tx(void){
  UCSR0B |= (1<<TXEN0);
  UCSR0C  = (1<<UCSZ00)| (1<<UCSZ01);
}

void UART_Config_Rx(void){
  UCSR0B |= (1<<RXEN0);
  UCSR0C  = (1<<UCSZ00)| (1<<UCSZ01);
}

void UART_Config_Rx_Interrupt(void){
  UCSR0B |= (1<<RXCIE0);
  sei();
}

void UART_Tx_Byte(uint8_t val){
  while(!(UCSR0A & (1<<UDRE0)));
  UDR0 = val;
}

uint8_t UART_Rx_Byte(void){
  volatile uint8_t val = 0;
  if( UCSR0A & (1<<FE0) ){
    val = UDR0;
    UART.Error = UART_RX_ERR_FRAMING;
  }else if(UCSR0A & (1<<DOR0) ){
    val = UDR0;
    UART.Error = UART_RX_ERR_OVERRUN;
  }else{
    val = UDR0;
    UART.Error = UART_RX_ERR_NO_ERR;
  }
  return val;
}

void UART_Timer_Init(void){

  uint32_t temp0 = F_CPU;
  uint32_t temp1 = UART_RX_PCKT_CMPLT_DELAY;
  temp1 *= 1000;
  temp0 /= 1024;             //Prescaler
  temp1 /= temp0;                    
  UART.Timer.ResetVal = temp1;
  UART.Timer.ResetVal = 0xFF - temp1;
  
  ASSR   = 0x00;
  TCCR2A = 0x00;
  TCCR2B = 0x00;
  TIMSK2 = 0x00;
  TCNT2  = 0x00;
  TIFR2  = 0xFF;
  TIMSK2 = (1<<TOIE2);
  sei();
  #if UART_RX_PCKT_CMPLT_DELAY<20U
    #warning UART_RX_PCKT_CMPLT_DELAY value < 20
  #endif
}

void UART_Timer_Enable(void){
  TCCR2B = 0x07;
}

void UART_Timer_Disable(void){ 
  TCCR2B = 0x00;
}
